# simple-reverse-proxy

./: .gitignore  README.md  pyproject.toml
src/simple_reverse_proxy/: __init__.py  proxy.py
